# quetoo

./: .autotools  .configure.in.swp  .cproject  .gitattributes  .gitignore  .project  0001-BSP-triangle-soup.patch  181.patch  CONTRIBUTING.md  Doxyfile  LIGHT_PIPELINE_ANALYSIS.md  Makefile.am  Quetoo.code-workspace  README  README.md  SDL3_MIGRATION_SUMMARY.md  SHADOW_6PASS_OPTIMIZATION.md  TODO  appveyor.yml  configure.ac  configure.in  eclipse-formatting.xml  foo.patch  mkheaders.sh  quemath.sed  quetoo-src.7z  src.7z
android/: ASSETS.md  CMakeLists.txt  CONTROLS.md  DEPENDENCIES.md  LIFECYCLE.md  PORTING.md  PORT_CHANGES.md  README.md  RENDERER_GLES.md  android_sdk_setup.sh  build_all_ndk.sh  build_apk_manual.sh  build_http_stack.sh  deps2_ndk_build.sh  engine_core_ndk_probe.sh  game_ndk_build.sh  objectively_ndk_probe.sh  objmvc_ndk_build.sh  renderer_gles_probe.sh
android/app/: README.md  build.gradle  gradle.properties  proguard-rules.pro  settings.gradle
android/cmake/: QuetooDependencies.cmake  QuetooSources.cmake  config.h.cmake.in
android/qglib/: .gitignore  Makefile  ndk_check.sh  probe.sh  probe_all.sh  qglib.h  qglib_array.c  qglib_checksum.c  qglib_checksum.h  qglib_hash.c  qglib_hash.h  qglib_io.c  qglib_io.h  qglib_list.c  qglib_misc.c  qglib_misc.h  qglib_ptrarray.c  qglib_ptrarray.h  qglib_queue.c  qglib_queue.h  qglib_rand.c  qglib_rand.h  qglib_regex.c  qglib_regex.h  qglib_slist.c  qglib_slist.h  qglib_string.c  qglib_string.h  qglib_util.c  qglib_util.h  run_tests.bat  test_checksum.c  test_hash.c  test_io.c  test_misc.c  test_ptrarray.c  test_qglib.c  test_queue.c  test_rand.c  test_regex.c  (+3 more)
src/: Makefile.am  anorms.h  atlas.c  atlas.h  binds.h  cl_cmd.c  cl_console.c  cl_effect.c  cl_emit.c  cl_entity.c  cl_http.c  cl_input.c  cl_keys.c  cl_loc.c  cl_main.c  cl_parse.c  cl_pred.c  cl_screen.c  cl_server.c  cl_tentity.c  cl_view.c  client.h  cmd.c  cmd.c.orig  cmd.h  cmodel.c  cmodel.h  color.c  color.h  common-anorms.h  common.c  common.h  common.h.orig  con_curses.c  con_curses.h  console-curses.c  console.c  console.c.orig  console.h  curses.c  (+112 more)
src/ai/: Makefile.am  ai.h  ai_goal.c  ai_goal.h  ai_local.h  ai_main.c  ai_main.h  ai_types.h
src/cgame/: Makefile.am  cgame.h
src/client/: Makefile.am  cl_binds.h  cl_cgame.c  cl_cgame.h  cl_client.c  cl_client.h  cl_cmd.c  cl_cmd.h  cl_cmd.h.orig  cl_console.c  cl_console.h  cl_demo.c  cl_demo.c.orig  cl_demo.h  cl_demo.h.orig  cl_editor.c  cl_editor.h  cl_effect.c  cl_effect.h  cl_emit.c  cl_emit.h  cl_entity.c  cl_entity.h  cl_entity.h.orig  cl_forward.c  cl_forward.h  cl_http.c  cl_http.c.orig  cl_http.h  cl_input.c  cl_input.c.orig  cl_input.h  cl_keys.c  cl_keys.c.orig  cl_keys.h  cl_keys.h.orig  cl_loc.c  cl_loc.h  cl_local.h  cl_main.c  (+37 more)
src/collision/: Makefile.am  cm_bsp.c  cm_bsp.h  cm_entity.c  cm_entity.h  cm_local.h  cm_main.c  cm_main.h  cm_manifest.c  cm_manifest.h  cm_material.c  cm_material.h  cm_model.c  cm_model.h  cm_polylib.c  cm_polylib.h  cm_test.c  cm_test.c.orig  cm_test.h  cm_trace.c  cm_trace.c.orig  cm_trace.h  cm_types.h  cm_vis.c  cm_vis.h  cm_voxel.c  cm_voxel.h  cmodel.h  collision.h
src/common/: Makefile.am  atlas.c  atlas.h  cmd.c  cmd.h  common.c  common.h  console.c  console.h  cvar.c  cvar.h  demo.c  demo.h  files.h  filesystem.c  filesystem.h  image-heightmap.c  image-heightmap.h  image.c  image.h  installer-s3.c  installer-s3.h  installer.c  installer.h  mem.c  mem.h  mem_buf.c  mem_buf.h  rgb9e5.c  rgb9e5.h  sys.c  sys.h  thread.c  thread.h
src/game/: Makefile.am  g_client.c  g_main.c  g_main.h  g_types.h  game.h  game.h.orig
src/libs/: Makefile.am  cmd.c  cmd.h  cmodel.h  common.c  console.h  curses.h  cvar.c  cvar.h  filesystem.h  images.c  net.h  net_udp.c  pak.h  shared.h
src/main/: Makefile.am  main.c  main.c.orig  quake2world-icon.rc  quetoo-dedicated-icon.rc  quetoo-icon.rc  quetoo.rc  revision
src/master/: Makefile.am  main.c
src/net/: Makefile.am  net.c  net.c.orig  net.h  net_chan.c  net_chan.c.orig  net_chan.h  net_chan.h.orig  net_http.c  net_http.h  net_http_server.c  net_http_server.h  net_message.c  net_message.c.orig  net_message.h  net_message.h.orig  net_sock.c  net_sock.h  net_tcp.c  net_tcp.h  net_types.h  net_types.h.orig  net_udp.c  net_udp.h
src/quemap/: Makefile.am  bsp.c  csg.h  entity.c  face.c  leakfile.c  leakfile.h  light.c  light.h  main.c  manifest.c  map.c  map.h  material.c  patch.c  patch.h  points.h  polylib.c  portal.h  qbsp.c  qbsp.h  qlight.c  qzip.c  texture.c  tjunction.c  tjunction.h  tree.c  voxel.c  voxel.h  work.c  writebsp.c
src/server/: Makefile.am  server.h  sv_admin.c  sv_admin.c.orig  sv_admin.h  sv_ccmds.c  sv_client.c  sv_client.c.orig  sv_client.h  sv_console-curses.c  sv_console-curses.h  sv_console.c  sv_console.c.orig  sv_console.h  sv_console.h.orig  sv_demo.c  sv_demo.h  sv_dummy.c  sv_editor.c  sv_editor.h  sv_entity.c  sv_entity.c.orig  sv_entity.h  sv_entity.h.orig  sv_ents.c  sv_game.c  sv_game.h  sv_http.c  sv_http.h  sv_init.c  sv_init.h  sv_local.h  sv_main.c  sv_main.h  sv_main.h.orig  sv_map_list.c  sv_map_list.h  sv_master.c  sv_master.c.orig  sv_master.h  (+8 more)
src/shared/: Makefile.am  bounds.h  box.c  box.h  color.c  color.h  matrix.h  md5.c  md5.h  parse.c  parse.h  qstring.c  qstring.h  shared-anorms.c  shared.c  shared.h  swap.c  swap.h  vector.h
src/test/: test.c  test.h  thread_tests.c
src/tests/: Makefile.am  check_ai.c  check_ai_ann.c  check_atlas.c  check_box.c  check_cm_entity.c  check_cm_manifest.c  check_cm_polylib.c  check_cm_test.c  check_cmd.c  check_color.c  check_cvar.c  check_demo.c  check_editor_map.c  check_filesystem.c  check_http.c  check_image.c  check_master.c  check_mem.c  check_mem.c.orig  check_net_message.c  check_quemath.c  check_r_media.c  check_r_media.c.orig  check_shared.c  check_thread  check_thread.c  check_thread.c.orig  check_threads  check_threads.c  check_vector.c  tests.c  tests.h
src/tools/: Makefile.am  README.md  __init__.py  matfu.py  md22obj.py  mdl2obj.py  objfu.py  pyproject.toml  quemap-fu.py  symbolicate_dmp.py  unpak.py
(+2005 files in other folders)
